Update Product specification.